# mail-tracker

./: .gitignore  Cargo.toml  Makefile
extension/: content.js  manifest.json  options.html  options.js
migrations/: 1_setup.sql  2_log.sql
src/: config.rs  main.rs
src/http/: mail.rs  mod.rs
